--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BTLED - ICT</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span>florezmE441@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span>florezmae441@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
